[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true
show_error_codes = true
exclude = ['docs/']

[tool.mypy-mock]
ignore_missing_imports = true

[tool.mypy-pytz]
ignore_missing_imports = true

[tool.poetry]
name = "volttron-dnp3-outstation"
version = "0.0.1-rc"
description = "A Volttron agent that acts as a dnp3 outstation."
authors = ["Kefei Mo <kefei.mo@pnnl.gov>"]
license = "Apache-2.0"
maintainers = ["Volttron Team <volttron@pnnl.gov>"]
readme = "README.md"
homepage = "https://github.com/eclipse-volttron/volttron-dnp3-outstation"
repository = "https://github.com/eclipse-volttron/volttron-dnp3-outstation"
packages = [{ include = "dnp3_outstation", from = "src" },
    { include = "vdnp3_outstation", from = "src" }
]
keywords = ["volttron", "agent", "dnp3", "outstation", "application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
volttron = ">=10.0.2rc0"
dnp3-python = ">=0.2.3b3"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.4"
pytest-cov = ">=3.0.0"
black = ">=21.5b2"
pre-commit = ">=2.13.0"
volttron-testing = ">=0.3.1a7"
mypy = ">=0.982"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"

[tool.poetry.scripts]  # entry point
vdnp3_outstation = "vdnp3_outstation.run_volttron_dnp3_outstation_cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eclipse-volttron/volttron-dnp3-outstation/issues"
